fix(shell): fix z-index of panels. #10222

--- a/packages/calcite-components/src/components/shell/shell.scss
+++ b/packages/calcite-components/src/components/shell/shell.scss
@@ -78,8 +78,8 @@
 
 slot[name="panel-start"]::slotted(calcite-shell-panel),
 slot[name="panel-end"]::slotted(calcite-shell-panel) {
-  @apply relative
-  z-header;
+  @apply relative;
+  z-index: calc(var(--calcite-z-index) + 1);
 }
 
 slot[name="panel-end"]::slotted(calcite-shell-panel) {
